tests/grammar/schema/init/init_add_member_fail_2/stderr.golden
error[E2L23]: CompileError
  --> ${CWD}/main.k:15:5
   |
15 |     error = "CannotAddMembers"
   |     ^ Cannot add member 'error' to schema 'Person'
   |